infrastructure/controllers/addons/longhorn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-http-route
  namespace: longhorn-system
spec:
  parentRefs:
    - name: internal-gateway
      namespace: gateway-system
  
  hostnames:
    - longhorn.tmatthews.casa
  
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      
      backendRefs:
        - name: longhorn-frontend
          port: 80
